--- a/Views/Shared/Admin_Layout.cshtml
+++ b/Views/Shared/Admin_Layout.cshtml
@@ -103,7 +103,7 @@
                     </div>
                     <ul class="submenu">
                         <li class="submenu-item">
-                            <a asp-controller="Admin" asp-action="Users" 
+                            <a asp-controller="Admin" asp-action="AdminUsers" 
                             class="submenu-link @(currentAction == "Users" ? "active" : "")">
                                 <i class="fas fa-user-cog submenu-icon"></i>
                                 <span>Manage Users</span>
