--- a/Views/Homeowner/Community.cshtml
+++ b/Views/Homeowner/Community.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/homeowners/community.css" />
+<link rel="stylesheet" href="~/css/homeowners/community.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 <div class="community-wrapper">
@@ -10,7 +10,7 @@
         <!-- Left Sidebar (20%) -->
         <div class="community-sidebar">
             <div class="sidebar-section">
-                <div class="sidebar-item active">
+                <div class="sidebar-item">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </div>
