--- a/Views/Shared/Dashboard_Layout.cshtml
+++ b/Views/Shared/Dashboard_Layout.cshtml
@@ -36,6 +36,9 @@
         <li class="nav-item">
             <a asp-controller="Homeowner" asp-action="Community" class="nav-link">Community</a>
         </li>
+         <li class="nav-item">
+            <a asp-controller="Homeowner" asp-action="Events" class="nav-link">Events</a>
+        </li>
     </ul>
 
     <!-- User Profile and Hamburger Container -->
